--- a/PosAgain/src/View/PosViewA.form
+++ b/PosAgain/src/View/PosViewA.form
@@ -1677,15 +1677,11 @@
                           <Component id="btnReportPurchase" min="-2" max="-2" attributes="0"/>
                           <Group type="102" attributes="0">
                               <Component id="jLabel30" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="60" max="-2" attributes="0"/>
-                              <Component id="JdateReportFrom" min="-2" pref="187" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
+                              <EmptySpace min="-2" pref="319" max="-2" attributes="0"/>
                               <Component id="jLabel31" min="-2" max="-2" attributes="0"/>
-                              <EmptySpace min="-2" pref="67" max="-2" attributes="0"/>
-                              <Component id="JdateReportTo" min="-2" pref="217" max="-2" attributes="0"/>
                           </Group>
                       </Group>
-                      <EmptySpace max="32767" attributes="0"/>
+                      <EmptySpace pref="696" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -1696,13 +1692,11 @@
                       <EmptySpace min="-2" pref="34" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="jLabel30" min="-2" max="-2" attributes="0"/>
-                          <Component id="JdateReportFrom" min="-2" max="-2" attributes="0"/>
                           <Component id="jLabel31" alignment="0" min="-2" max="-2" attributes="0"/>
-                          <Component id="JdateReportTo" alignment="0" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace min="-2" pref="72" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="74" max="-2" attributes="0"/>
                       <Component id="btnReportPurchase" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="0" pref="340" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="344" max="32767" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -1750,14 +1744,10 @@
                 <Property name="text" type="java.lang.String" value="Form"/>
               </Properties>
             </Component>
-            <Component class="com.toedter.calendar.JDateChooser" name="JdateReportFrom">
-            </Component>
             <Component class="javax.swing.JLabel" name="jLabel31">
               <Properties>
                 <Property name="text" type="java.lang.String" value="To"/>
               </Properties>
-            </Component>
-            <Component class="com.toedter.calendar.JDateChooser" name="JdateReportTo">
             </Component>
             <Component class="javax.swing.JButton" name="btnReportPurchase">
               <Properties>
